--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SHELeadsIndia - Empowering Women Entrepreneurs | Digital Marketing & AI Training</title>
     <meta name="description" content="Transform your business dreams into digital success. Join India's most empowering community of women entrepreneurs in Pune, Nagpur & Nashik. Master digital marketing and AI tools." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="SHELeadsIndia" />
 
-    <meta property="og:title" content="04c63fad-7f5b-43d4-bc20-19f1cc62e069" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="SHELeadsIndia - Empowering Women Entrepreneurs" />
+    <meta property="og:description" content="Digital Marketing & AI Training for Women Entrepreneurs" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/hero-women-entrepreneurs.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@SHELeadsIndia" />
+    <meta name="twitter:image" content="/assets/hero-women-entrepreneurs.jpg" />
   </head>
 
   <body>
